# local-ai-lab

./: .gitignore  CHEATSHEET.md  FINETUNING_GUIDE.md  MAC_TRAINING_GUIDE.md  Makefile  QUICKSTART.txt  README.md  TESTING.md  USAGE_GUIDE.md  training_data.jsonl
agents/architect-agent/: package-lock.json  package.json
agents/architect-agent/src/: index.ts
agents/ops-agent/: go.mod
agents/security-agent/: Cargo.toml
agents/security-agent/src/: main.rs
cli/: pytest.ini  requirements.txt  setup.py
cli/lab/: __init__.py  cli.py
cli/lab/agents/: orchestrator.py
cli/lab/commands/: agent.py  chat.py  file.py  model.py  multi_agent.py  plan.py  train.py
cli/lab/core/: agent_config.py  model_info.py  registry.py
cli/lab/server/: api.py
cli/tests/: __init__.py  conftest.py  run_tests.py
colab_training/: README.md  advanced_training_colab.ipynb  generate.py  generate_advanced_training.py
colab_training/executor/: README.md  colab_executor.py
colab_training/templates/: unsloth_base.ipynb.j2
colab_training/training_data/: advanced_combined_formatted.json  advanced_combined_raw.jsonl  advanced_training_stats.json
colab_training/utils/: sync_to_local.py
docker/: Dockerfile.api  Dockerfile.architect  Dockerfile.ops  Dockerfile.security  docker-compose.yml
plans/: ecommerce-api-checklist.md  ecommerce-api-metadata.json  ecommerce-api-plan.md
plans/.memory/: session-2026-03-30.md
scripts/: fix_dependencies.sh  quickstart.sh  setup.sh  smoke_test.sh  train_example.sh
web-ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+35 files in other folders)
